Fixing issues with drag-and-drop on collapsed flexible content metaboxes

--- a/sass/admin-style.scss
+++ b/sass/admin-style.scss
@@ -431,6 +431,10 @@ small.launchpad-inline {
 	}
 }
 
+.launchpad-flexible-container {
+	padding: 2px 0;
+}
+
 .launchpad-flexible-container-placeholder {
 	border: 5px dashed gray;
 	margin: 2em 1em;
